syntax = "proto3";

package devcycle.config;

message Project {
    string id = 1;
    string key = 2;
    string a0_organization = 3;
    ProjectSettings settings = 4;
}

message ProjectSettings {
    EdgeDBSettings edgedb = 1;
    OptInSettings optin = 2;
    bool disable_passthrough_rollouts = 3;
}

message EdgeDBSettings {
    bool enabled = 1;
}

message OptInSettings {
    bool enabled = 1;
    string title = 2;
    string description = 3;
    string image_url = 4;
    OptInColors colors = 5;
}

message OptInColors {
    string primary = 1;
    string secondary = 2;
}

message Environment {
    string id = 1;
    string key = 2;
}

message SSE {
    string hostname = 1;
    string path = 2;
}

message Variable {
    string id = 1;
    string type = 2;
    string key = 3;
}

message Audience {
    string data = 1;  // JSON-encoded audience data
}

message ConfigFeature {
    string data = 1;  // JSON-encoded feature data
}

message ConfigBodyProto {
    Project project = 1;
    map<string, Audience> audiences = 2;
    Environment environment = 3;
    repeated ConfigFeature features = 4;
    repeated Variable variables = 5;
    SSE sse = 6;
    string etag = 7;
    string ray_id = 8;
    int64 last_modified = 9;  // Unix timestamp in seconds
}

